Added board (discussion board) page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,8 @@
       {% endif %}
     </head>
     <body>
-        <div>Microblog: <a href="/index">Home</a></div>
+        <div>Home: <a href="/index">Home</a></div>
+        <div>Board: <a href="/board">Board</a></div>
         <hr>
         {% block content %}{% endblock %}
     </body>
