--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,6 +1,6 @@
 <table>
     <tr valign="top">
         <td><img src="{{ post.author.avatar(36) }}"></td>
-        <td>{{ post.author.username }} said at {{ post.get_ftime() }}:<br>"{{ post.body }}"</td>
-    </tr>
+        <td>[{{ post.id }}] {{ post.author.username }} said at {{ post.get_ftime() }}:<br>"{{ post.body }}"</td>
+</tr>
 </table>
