--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,19 +6,27 @@
             <td><img src="{{ user.avatar(128) }}"></td>
             <td><h1>User: {{ user.username }}</h1></td>
             <td><h1> | </h1> </td>
-            {%if user.role == -1 %}
-            <td><h1>Role: Unverified User </h1></td>
-            {%elif user.role == 0 %}
-            <td><h1>Role: Admin </h1></td>
-            {%elif user.role == 1 %}
-            <td><h1>Role: Lecturer </h1></td>
-            {% elif user.role == 2 %}
-            <td><h1>Role: Student </h1></td>
-            {% endif %}
+            <td><h1>Role: {{ user.get_role() }} </h1></td>
+
         </tr>
     </table>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.role.label }}
+            {{ form.role(size=32) }}<br>
+            {% for error in form.role.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit() }}</p>
+    </form>
     <hr>
     {% for post in posts %}
         {% include '_post.html' %}
     {% endfor %}
+
+    
+
+    
 {% endblock %}
