--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-    <title>{{ title }} - Assignment</title>
+    <title>{{ title }} - Lab Platform</title>
     {% else %}
-    <title>Assignment</title>
+    <title>Lab Platform</title>
     {% endif %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Assignment</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Lab Platform</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
                         <a class="nav-link" aria-current="page" href="{{url_for('index')}}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{{url_for('board')}}">Board</a>
+                        <a class="nav-link" aria-current="page" href="{{url_for('board')}}">Files</a>
                     </li>
                     {% if not current_user.is_anonymous and current_user.is_admin() %}
                     <li class="nav-item">
