--- a/app/templates/board.html
+++ b/app/templates/board.html
@@ -1,19 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Discussion Board</h1>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.body.label }}<br>
-            {{ form.body(size=64) }}<br>
-            {% for error in form.body.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    <hr>
-    {% for post in posts %}
-        {% include '_post.html' %}
+    <h1>Hi, {{ current_user.username }}!</h1>
+    <h1>Uploaded Files</h1>
+    {% if current_user.is_lecturer() or current_user.is_admin() %}
+        <a href="{{ url_for('upload') }}">Upload New File</a>
+    {% endif %}
+    {% for file in files %}
+        {% include '_files.html' %}
     {% endfor %}
 {% endblock %}
