--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,4 +2,19 @@
 
 {% block content %}
     <h1>Hi, {{ current_user.username }}!</h1>
+    <h1>Discussion Board</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.body.label }}<br>
+            {{ form.body(size=64) }}<br>
+            {% for error in form.body.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit() }}</p>
+    <hr>
+    {% for post in posts %}
+        {% include '_post.html' %}
+    {% endfor %}
 {% endblock %}
