--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi, {{ current_user.username }}!</h1>
-    <h1>Uploaded Files</h1>
+    <h1>{{ file.title }}</h1>
+    <p>{{ file.description }}</p>
+    <p>
+        {% if  %}
+    </p>
+    
     {% if current_user.is_lecturer() or current_user.is_admin() %}
+    <p>
         <form action="" method="post">
             {{ form.hidden_tag() }}
-            <input type="submit" value="Upload">
+            <input type="submit" value="Delete">
         </form>
+    </p>
     {% endif %}
-    {% for file in files %}
-        {% include '_files.html' %}
-    {% endfor %}
+    
+
+    
 {% endblock %}
