Added file previews

--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -6,6 +6,7 @@
             </a>
         </td>
         <td>
+            [{{ post.id }}]
             <a href="{{ url_for('user', username=post.author.username) }}">
                 {{ post.author.username }}
             </a>
