--- a/app/templates/_files.html
+++ b/app/templates/_files.html
@@ -5,21 +5,24 @@
                 <img src="{{ file.uploader.avatar(70) }}" />
             </a>
         </td>
+        <td width="500px">
+            <p>
+                <a href="{{ url_for('details', fileid = file.id) }}">
+                    {{ file.title }}
+                </a>
+                <br> {% if file.description %}
+                {{ file.description }}
+                {% endif %}
+            </p>
+        </td>
         <td width="100px">
             <a href="{{ url_for('user', username=file.uploader.username) }}">
                 {{ file.uploader.username }}
             </a>
         </td>
-        <td>
-        </td>
-        <td width="500px">
+        <td width="100px">
             <p>
-                <a href="{{ url_for('details', fileid = file.id) }}">
-                    {{ file.title }}
-                {% if file.description %}
-                {{ file.description }}
-                {% endif %}
+                {{ file.timestamp.strftime('%d-%m-%Y') }}
             </p>
-        </td>
     </tr>
 </table>
