--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -4,7 +4,7 @@
 <p>{{ file.description }}</p>
 <div class="container">
     {% set x = '/' + file.path %}
-    <img src="{{ x }}">
+    <img src="{{ x }}" style="max-width: 25%;">
 
 </div>
 
