--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -1,12 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>{{ file.title }}</h1>
+<table class="table table-hover">
+    <tr>
+        <td width="120px">Uploaded By:</td>
+        <td><a href="{{ url_for('user', username=file.uploader.username) }}">
+                {{ file.uploader.username }}
+            </a></td>
+        
+    </tr>
+    <tr width="100%">
+        <td>Submitted on:
+        </td>
+        <td>
+            {{ file.timestamp.strftime('%d-%m-%Y') }}
+        </td>
+    </tr>
+</table>
 <p>{{ file.description }}</p>
 <div class="container">
     {% set x = '/' + file.path %}
     <img src="{{ x }}" style="max-width: 25%;">
 
 </div>
+
+{% if file.submissions and (current_user.is_lecturer() or current_user.is_admin()) %}
+
+
+
+{% endif %}
 
 {% if current_user.is_lecturer() or current_user.is_admin() %}
 <p>
