Added marks on detailsassignments

--- a/app/templates/detailsAssignment.html
+++ b/app/templates/detailsAssignment.html
@@ -8,61 +8,77 @@
 {% if current_user.is_student() and not submittedFile %}
 <p>
     Create A Submission:
-    <form method="post" enctype="multipart/form-data">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.title.label }}<br>
-            {{ form.title(size=32) }}<br>
-            {% for error in form.title.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            <br>{{ form.description.label }}<br>
-            {{ form.description(size=64) }}<br>
-            {% for error in form.description.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        {{ form.file }}
-        <input type="submit">
-    </form>
+<form method="post" enctype="multipart/form-data">
+    {{ form.hidden_tag() }}
+    <p>
+        {{ form.title.label }}<br>
+        {{ form.title(size=32) }}<br>
+        {% for error in form.title.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+    </p>
+    <p>
+        <br>{{ form.description.label }}<br>
+        {{ form.description(size=64) }}<br>
+        {% for error in form.description.errors %}
+        <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+    </p>
+    {{ form.file }}
+    <input type="submit">
+</form>
 </p>
 
 {% elif current_user.is_student() and submittedFile %}
 <h1>Your Submission</h1>
-<p>
-    <b>Title:</b> {{ submittedFile.title }}
-    <br>
-    <b>Description: </b> {{ submittedFile.description }}
-    <br>
-    <b>Submitted On: </b> {{ submittedFile.timestamp.strftime('%d-%m-%Y') }}
-    <br>
-    <div class="container">
-        {% set x = '/' + submittedFile.path %}
-        
-        <img src="{{ x }}" style="max-width: 25%;">
-    
-    </div>
-</p>
+
+<table class="table table-hover">
+    <tr>
+        <td>Title:</td>
+        <td>{{ submittedFile.title }}</td>
+    </tr>
+    <tr>
+        <td>Description:</td>
+        <td>{{ submittedFile.description }}</td>
+    </tr>
+    <tr width="100%">
+        <td>Submitted on:
+        </td>
+        <td>
+            {{ submittedFile.timestamp.strftime('%d-%m-%Y') }}
+        </td>
+    </tr>
+    <tr>
+        <td>Graded:</td>
+        <td>{{ submittedFile.submissions.marks }}/{{ submittedFile.submissions.assignment.totalMarks }}</td>
+    </tr>
+</table>
+<div class="container">
+    {% set x = '/' + submittedFile.path %}
+
+    <img src="{{ x }}" style="max-width: 25%;">
+
+</div>
+
+
 {% endif %}
 
 {% if current_user.is_lecturer() or current_user.is_admin() %}
-    {% if not submittedFile %}
-        <h1>No Submissions Yet</h1>
-    {% endif %}
-    {% if submittedFile %}
-    <h1>Submissions</h1>
-    <table>
-        <tr>
-        </tr>
-        {% for file in submittedFile %}
-        {% include '_files.html' %}
-
-        {% endfor %}
-
-    {% endif %}
-
+{% if not submittedFile %}
+<h1>No Submissions Yet</h1>
 {% endif %}
+{% if submittedFile %}
+<h1>Submissions</h1>
+<table>
+    <tr>
+    </tr>
+    {% for file in submittedFile %}
+    {% include '_files.html' %}
 
-{% endblock %}
+    {% endfor %}
+
+    {% endif %}
+
+    {% endif %}
+
+    {% endblock %}
