--- a/app/templates/detailsAssignment.html
+++ b/app/templates/detailsAssignment.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import 'bootstrap_wtf.html' as wtf %}
 {% block content %}
 <h1>{{ assignment.title }}</h1>
 <p>{{ assignment.description }}</p>
@@ -7,26 +8,9 @@
 
 {% if current_user.is_student() and not submittedFile %}
 <p>
-    Create A Submission:
-<form method="post" enctype="multipart/form-data">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.title.label }}<br>
-        {{ form.title(size=32) }}<br>
-        {% for error in form.title.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        <br>{{ form.description.label }}<br>
-        {{ form.description(size=64) }}<br>
-        {% for error in form.description.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    {{ form.file }}
-    <input type="submit">
-</form>
+    <hr>
+    <h1>Create A Submission:</h1>
+    {{ wtf.quick_form(form) }}
 </p>
 
 {% elif current_user.is_student() and submittedFile %}
