--- a/app/templates/adminboard.html
+++ b/app/templates/adminboard.html
@@ -1,17 +1,9 @@
 {% extends "base.html" %}
+{% import 'bootstrap_wtf.html' as wtf %}
 
 {% block content %}
     <h1>Admin Board</h1>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.post_ID.label }}<br>
-            {{ form.post_ID(size=64) }}<br>
-            {% for error in form.post_ID.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
+    {{ wtf.quick_form(form) }}
     <hr>
     {% for post in posts %}
         {% include '_post.html' %}
