--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import 'bootstrap_wtf.html' as wtf %}
 {% block content %}
 <h1>{{ file.title }}</h1>
 <table class="table table-hover">
@@ -40,25 +41,10 @@
 
 {% if file.submissions and (current_user.is_lecturer() or current_user.is_admin()) %}
 <p>
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    {{ form.marks.label }}<br>
-    {{ form.marks(size=32) }}<br>
-    {% for error in form.marks.errors %}
-    <span style="color: red;">[{{ error }}]</span>
-    {% endfor %}
-    <input type="submit" value="Grade">
-    </p>
-    </form>
-
+{{ wtf.quick_form(form) }}
 
     {% elif (not file.submissions) and (current_user.is_lecturer() or current_user.is_admin())%}
-    <p>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <input type="submit" value="Delete">
-    </form>
-    </p>
+        {{ wtf.quick_form(form) }}
     {% endif %}
-
+</p>
     {% endblock %}
